--- a/tss_styles.css
+++ b/tss_styles.css
@@ -1,6 +1,12 @@
 @charset "ustf-8";
-@import url(tss-layout.css);
 
+@font-face {
+    font-family: Quicksand;
+    src: url('Quicksand-Regular.woff') format('woff');
+    url('Quicksand-Regular.tff') format('truetype');
+}
+
+/* @import url('https://fonts.googleapis.com/css?family=Roboto'); */
 /*
    New Perspectives on HTML5 and CSS3, 7th Edition
    Tutorial 2
@@ -20,12 +26,35 @@ html {
 
 body {
     color: rgb(91, 91, 91);
-    background-color: ivory
+    background-color: ivory;
+    font-family: Verdana, Geneva, sans-serif;
+    /* font-family: 'Roboto', sans-serif; */
 }
 
 /* Heading Styles */
-h1 {
-    color: white
+h1,
+h2 {
+    font-family: Quicksand, Verdana, Geneva, Sans-serif
+}
+
+article#about_tss h1 {
+    color: white;
+    background-color: rgb(222, 128, 60);
+}
+
+article#about_tss h2 {
+    color: white;
+    background-color: rgb(235, 177, 131);
+}
+
+article.syllabus h1,
+article.syllabus h2 {
+    background-color: rgb(255, 185, 255);
+    color: rgb(101, 101, 101);
+}
+
+aside blockquote {
+    color: rgb(232, 165, 116)
 }
 
 /* Aside and Blockquote Styles */
